--- a/same.html
+++ b/same.html
@@ -5,10 +5,9 @@
 </head>
 <body>
 
-	
-
 	content i think
-	<button onclick="flip()""> </button>
+
+	<button onclick="settimer()""> </button>
 
 	<div id="countdown"> haha same </div>
 
@@ -16,25 +15,27 @@
 		const starttime = Date.now();
 		var currenttime = 0;
 		var countdown = 60;
-		var check = false;
+		var check = true;
 		var timer;
 
-		function flip(){
-			check = !check;
-			console.log(check);
-			if(check) timer = setInterval(updatetime(), 10);
+		function settimer(){
+			timer = setInterval(updatetime, 1);
 		}
 
 		function updatetime(){
-			currenttime = Date.now();
-			countdown = Number((60-(currenttime-starttime)/1000).toFixed(2));
-			document.getElementById("countdown").innerHTML = countdown;
-			console.log(countdown);			
+			if(countdown >= 0){
+				currenttime = Date.now();
+				countdown = Number((10-(currenttime-starttime)/1000).toFixed(2));
+				document.getElementById("countdown").innerHTML = countdown;
+				console.log(countdown);	
+			}
+			else {
+				timer = null;
+				countdown = 0;
+			}
 		}
-
-		flip();
 		
-	</script>
+		</script>
 
 </body>
 </html>
