--- a/same.html
+++ b/same.html
@@ -9,14 +9,14 @@
 
 
 	<button onclick="settimer()"> timer </button>
-	<button onclick="fliptimer()"> hide </button>
-	<!-- content i think -->
+	<button onclick="hidetimer()"> hide </button>
+
+
 	<div id="countdown-content"> 
-	
-
-
-	<div id="countdown">  </div>
+		<div id="countdowntext"> GO TO CLASS </div>
+		<div id="countdown">  </div>
 	</div>
+
 
 	<script>
 		var starttime;
@@ -25,11 +25,12 @@
 		var check = true;
 		var hidden = true;
 		var timer;
-		var scheduleraw;
+
 		var schedule;
 
 		function settimer(){
-			starttime = Date.now()
+			document.getElementById("countdowntext").style.display = 'block';
+			starttime = Date.now();
 			timer = setInterval(updatetime, 13);
 		}
 
@@ -46,16 +47,21 @@
 			}
 		}
 
-		function fliptimer(){
-			if(hidden) document.getElementById("countdown-content").style.display = 'none';
-			else document.getElementById("countdown-content").style.display = 'block';
+		function hidetimer(){
+			if(hidden) {
+				document.getElementById("countdown-content").style.display = 'none';
+				document.getElementById("countdowntext").style.display = 'none';
+			}
+			else {
+				document.getElementById("countdown-content").style.display = 'block';
+				document.getElementById("countdowntext").style.display = 'block';
+			}
 			hidden = !hidden;
 		}
 
 		function parseschedule(res){
 			schedule = res.split(/\r?\n/);
 			console.log(schedule);
-			
 		}
 
 		$.get({
