--- a/same.html
+++ b/same.html
@@ -11,13 +11,13 @@
 	<button onclick="settimer()"> timer </button>
 	<button onclick="hidetimer()"> hide </button>
 
-	<div id="main-content">
-		<div class="item-a"> </div>
+	<div class="container">
 
-		<div class="item-b"> </div>
+		<div id="item-a"> schedule </div>
 
-		<div class="item-c"> </div>
+		<div id="item-b"> time </div>
 
+		<div id="item-c"> news </div>
 
 	</div>
 
