--- a/same.html
+++ b/same.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+	<!-- <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="jquery.js"></script>
 </head>
