--- a/same.html
+++ b/same.html
@@ -15,10 +15,10 @@
 		<div class="col s6">
 			<div class="card pink darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">A period (8:25 - 9:25)</span>
+					<span class="card-title">C period (8:25 - 9:25)</span>
 				</div>
 			</div>
-			<div class="card light-green darken-1">
+			<div class="card light-blue darken-1">
 				<div class="card-content white-text">
 					<span class="card-title">Brunch (9:25 - 9:45)</span>
 				</div>
@@ -30,7 +30,7 @@
 			</div>
 			<div class="card blue darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">B period (11:55 - 12:50)</span>
+					<span class="card-title">D period (11:55 - 12:50)</span>
 				</div>
 			</div>
 			<div class="card green darken-1">
@@ -40,7 +40,7 @@
 			</div>
 			<div class="card deep-purple darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">F period (1:30 - 2:25)</span>
+					<span class="card-title">G period (1:30 - 2:25)</span>
 				</div>
 			</div>
 		</div>
