--- a/same.html
+++ b/same.html
@@ -15,34 +15,39 @@
 		<div class="col s6">
 			<div class="card pink darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">Flex (8:25 - 10:00)</span>
+					<span class="card-title"> E (8:25 - 9:25)</span>
 				</div>
 			</div>
 			<div class="card light-blue darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">Brunch (10:00 - 10:15)</span>
+					<span class="card-title"> Brunch (9:25 - 9:40)</span>
 				</div>
 			</div>
 			<div class="card amber darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">Flex (10:15 - 12:15)</span>
+					<span class="card-title"> B (9:40 - 10:55)</span>
 				</div>
 			</div>
-			<!-- <div class="card blue darken-1">
+			<div class="card blue darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">D period (11:55 - 12:50)</span>
+					<span class="card-title"> C ( 11:05 - 12:20)</span>
 				</div>
 			</div>
 			<div class="card green darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">Lunch (12:50 - 1:30)</span>
+					<span class="card-title"> Lunch (12:20 - 1:00)</span>
 				</div>
 			</div>
 			<div class="card deep-purple darken-1">
 				<div class="card-content white-text">
-					<span class="card-title">G period (1:30 - 2:25)</span>
+					<span class="card-title"> A (1:30 - 2:15)</span>
 				</div>
-			</div> -->
+			</div> 
+			<div class="card deep-blue darken-1">
+				<div class="card-content white-text">
+					<span class="card-title"> G (2:25 - 3:40)</span>
+				</div>
+			</div> 
 		</div>
 		<div class="col s6">
 			<div class="card blue lighten-2">
