--- a/same.html
+++ b/same.html
@@ -43,7 +43,7 @@
 					<span class="card-title"> A (1:30 - 2:15)</span>
 				</div>
 			</div> 
-			<div class="card deep-blue darken-1">
+			<div class="card blue darken-1">
 				<div class="card-content white-text">
 					<span class="card-title"> G (2:25 - 3:40)</span>
 				</div>
